--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,21 +1,22 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container"> 
-        <a class="navbar-brand" href="#">Connecting People</a>
-         
-          <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$ | async">
+        <a class="navbar-brand" routerLink="/">Connecting People</a>
+         <ng-container *ngIf="accountService.currentUser$ | async">
+          <ul class="navbar-nav mr-auto">
+            
             <li class="nav-item">
-              <a class="nav-link" href="#">Matches</a>
+              <a class="nav-link" routerLink="/members" routerLinkActive='active'>Matches</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Lists</a>
+              <a class="nav-link" routerLink="/lists"routerLinkActive='active'>Lists</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Messages</a>
+              <a class="nav-link" routerLink="/messages"routerLinkActive='active'>Messages</a>
             </li>
           </ul>
-
-          <div class="dropdown" *ngIf="accountService.currentUser$| async" dropdown>
-              <a class="dropdown-toggle text-ligh" dropdownToggle>Welcome User</a>
+        </ng-container>
+          <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+              <a class="dropdown-toggle text-ligh" dropdownToggle>Welcome {{user.username | titlecase}}</a>
               <div class="dropdown-menu mt-3" *dropdownMenu>
                   <a class="dropdown-item">Edit Profile</a>
                   <a class="dropdown-item" (click)="logout()" >Logout</a>
@@ -25,7 +26,7 @@
           <form *ngIf="(accountService.currentUser$ | async) === null" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off" >
             <input name="username" [(ngModel)]="model.username" class="form-control mr-sm-2" type="text" placeholder="Username">
             <input name="password" [(ngModel)]="model.password" class="form-control mr-sm-2" type="password" placeholder="Password">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+            <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
           </form>
         </div>
     
