--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container"> 
         <a class="navbar-brand" routerLink="/">Connecting People</a>
-         <ng-container *ngIf="accountService.currentUser$ | async">
+         
           <ul class="navbar-nav mr-auto">
-            
+            <ng-container *ngIf="accountService.currentUser$ | async">
             <li class="nav-item">
               <a class="nav-link" routerLink="/members" routerLinkActive='active'>Matches</a>
             </li>
@@ -13,8 +13,14 @@
             <li class="nav-item">
               <a class="nav-link" routerLink="/messages"routerLinkActive='active'>Messages</a>
             </li>
+            
+          </ng-container>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/errors"routerLinkActive='active'>Errors</a>
+          </li>
+          
           </ul>
-        </ng-container>
+
           <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
               <a class="dropdown-toggle text-ligh" dropdownToggle>Welcome {{user.username | titlecase}}</a>
               <div class="dropdown-menu mt-3" *dropdownMenu>
