--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -3,7 +3,7 @@
         <a class="navbar-brand" routerLink="/">Connecting People</a>
          
           <ul class="navbar-nav mr-auto">
-            <ng-container *ngIf="accountService.currentUser$ | async">
+            <ng-container *ngIf="(accountService.currentUser$ | async)">
             <li class="nav-item">
               <a class="nav-link" routerLink="/members" routerLinkActive='active'>Matches</a>
             </li>
