--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -38,6 +38,8 @@
         <tab heading='Interests'>
             <h4>Interests</h4>
             <p>{{member.interests}}</p>
+            <h4>Looking For</h4>
+            <p>{{member.lookingFor}}</p>
         </tab>
         <tab heading='Photo'>
             <ngx-gallery [options]="galleryOptions" [images]="galleryImages" style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
