--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -57,9 +57,7 @@
                 
             </tab>
             <tab heading='Edit Photos'>
-                <h4>Interests</h4>
-                <p>Photo edit goes here</p>
-              
+                <app-photo-editor [member]="member"></app-photo-editor>                
             </tab>
         </tabset>
     </div>
